# hex

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml
include/hex/: convex_grid_shape.hpp  convex_polygon_parameters.hpp  convex_polygon_view.hpp  coordinate.hpp  coordinate_axis.hpp  grid.hpp  hex.hpp  neighbors_view.hpp  offset_parity.hpp  offset_rows_parameters.hpp  offset_rows_view.hpp  rotation_steps.hpp  vector.hpp
include/hex/detail/: detail_arithmetic.hpp  detail_bounded_polygon_iterator.hpp  detail_convex_polygon_iterator.hpp  detail_generating_random_access_iterator.hpp  detail_hexagon_bounds.hpp  detail_hexagon_size.hpp  detail_isosceles_trapezoid_size.hpp  detail_narrowing.hpp  detail_neighbors.hpp  detail_offset_conversion.hpp  detail_parse_integer_literal.hpp  detail_sqrt.hpp  detail_vector_iterator.hpp
include/hex/grid/: grid.hpp
include/hex/grid/detail/: detail_grid_iterator.hpp
include/hex/vector/: coordinate.hpp  coordinate_axis.hpp  reflection.hpp  rotation.hpp  rotation_steps.hpp  scaling.hpp  shearing.hpp  transformation.hpp  translation.hpp  vector.hpp
include/hex/vector/detail/: detail_transformation_utils.hpp  detail_vector_iterator.hpp
include/hex/views/convex_polygon/: convex_polygon_parameters.hpp  convex_polygon_view.hpp
include/hex/views/convex_polygon/detail/: detail_convex_polygon_iterator.hpp  detail_hexagon_size.hpp
include/hex/views/line/: line_view.hpp
include/hex/views/line/detail/: detail_line_iterator.hpp
include/hex/views/neighbors/: neighbors_view.hpp
include/hex/views/neighbors/detail/: detail_neighbors.hpp
include/hex/views/offset_rows/: offset_rows_parameters.hpp  offset_rows_view.hpp
include/hex/views/offset_rows/detail/: detail_offset_conversion.hpp
include/hex/views/transform/: transform_view.hpp
include/hex/views/transform/detail/: detail_transform_view.hpp
test/: CMakeLists.txt  test_convex_polygon_parameters.cpp  test_convex_polygon_view.cpp  test_coordinate.cpp  test_grid.cpp  test_neighbors_view.cpp  test_offset_rows_view.cpp  test_vector.cpp
test/detail/: test_bounded_polygon_iterator.cpp  test_convex_polygon_iterator.cpp  test_hexagon_bounds.cpp  test_hexagon_size.cpp  test_isosceles_trapezoid_size.cpp  test_offset_conversion.cpp
test/src/detail/: test_sqrt.cpp
test/src/grid/: test_grid.cpp
test/src/vector/: test_coordinate.cpp  test_coordinate_axis.cpp  test_transformation.cpp  test_vector.cpp
test/src/views/convex_polygon/: test_convex_polygon_parameters.cpp  test_convex_polygon_view.cpp
test/src/views/convex_polygon/detail/: test_convex_polygon_iterator.cpp  test_hexagon_size.cpp  test_isosceles_trapezoid_size.cpp
test/src/views/line/: test_line_view.cpp
test/src/views/line/detail/: test_line_iterator.cpp
test/src/views/neighbors/: test_neighbors_view.cpp
test/src/views/offset_rows/: test_offset_rows_view.cpp
test/src/views/offset_rows/detail/: test_offset_conversion.cpp
test/src/views/transform/: test_transform_view.cpp
